k3s/apps/netbox/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: netbox
  labels:
    app: netbox
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: netbox
  type: ClusterIP
