k3s/apps/netbox/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  ingressClassName: public
  rules:
    - host: netbox.lama-corp.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbox
                port:
                  name: http
  tls:
    - hosts:
        - netbox.lama-corp.space
      secretName: netbox-tls
